trunk/Archive2/b4/cb92e422e71de6/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:7:49: error: 'class std::basic_ostream<char>' has no member named 'str'
     cout << (stringstream() << "Liczba " << 42).str();
                                                 ^
