trunk/Archive2/b4/cb92e422e71de6/main.cpp
#include <sstream>
#include <iostream>
#include <string>
using namespace std;
 
int main() {
    cout << (stringstream() << "Liczba " << 42).str();
}